--- a/BapKids.Api/Web.config
+++ b/BapKids.Api/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="BapKidsContext" connectionString="data source=D-OS8-DATNM5;initial catalog=BapKids;persist security info=True;user id=sa;password=Datnm123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
