--- a/BapKids.Domain/App.config
+++ b/BapKids.Domain/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BapKidsContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=BapKids.Domain.Entities.BapKidsContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BapKidsContext" connectionString="data source=D-OS8-DATNM5;initial catalog=BapKids;persist security info=True;user id=sa;password=Datnm123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
