--- a/BapKids.Utility/BapKids.Utility.csproj
+++ b/BapKids.Utility/BapKids.Utility.csproj
@@ -41,10 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constant.cs" />
-    <Compile Include="Enum.cs" />
-    <Compile Include="Function.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Cache\" />
+    <Folder Include="Common\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Logging\" />
+    <Folder Include="Paging\" />
+    <Folder Include="Sorting\" />
+    <Folder Include="Validate\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
